--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="/socket.io/socket.io.js/"></script>
+    <style>
+        body {
+            margin-top: 30px;
+        }
+    </style>
+
 </head>
 <body>
     <div class="container">
@@ -28,5 +34,10 @@
             </div>
         </div>
     </div>
+    <script>
+        $(function () {
+            var socket = io.connect();
+        });
+    </script>
 </body>
 </html>
