--- a/index.html
+++ b/index.html
@@ -8,12 +8,29 @@
         body {
             margin-top: 30px;
         }
+
+        #messageArea {
+            display: none;
+        }
     </style>
 
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div id="userFormArea" class="row">
+            <div class="col-md-12">
+                <form id="userForm">
+                    <div class="form-group">
+                        <label>Enter Username</label>
+                        <input class="form-control" id="username" />
+                        <br />
+                        <input type="submit" class="btn btn-primary" value="Login" />
+                    </div>
+                </form>                
+            </div>
+        </div>
+
+        <div id="messageArea" class="row">
             <div class="col-md-4">
                 <div class="well">
                     <h3>Online Users</h3>
@@ -41,6 +58,11 @@
             var $messageForm = $('#messageForm');
             var $message = $('#message');
             var $chat = $('#chat');
+            var $messageArea = $('#messageArea');
+            var $userFormArea = $('#userFormArea');
+            var $userForm = $('#userForm');
+            var $users = $('#users');
+            var $username = $('#username');
 
             $messageForm.submit(function (e) {
                 // Cancel the default action of the click 
@@ -55,6 +77,17 @@
 
             socket.on('new message', function (data) {
                 $chat.append('<div class="well">' + data.msg + '</div>');
+            });
+            
+            $userForm.submit(function (e) {
+                e.preventDefault();
+                socket.emit('new user', $username.val(), function (data) {
+                    if (data) {
+                        $userFormArea.hide();
+                        $messageArea.show();
+                    }
+                });
+                $username.val('');
             });
         });
     </script>
