--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
                 // (we won't take browser to a new URL)
                 e.preventDefault();
                 console.log('Submitted');
-                // this is listened by sever (server.js)
+                // this is listened by server (server.js)
                 socket.emit('send message', $message.val());
                 // Empty text area
                 $message.val('');
             });
 
             socket.on('new message', function (data) {
-                $chat.append('<div class="well">' + data.msg + '</div>');
+                $chat.append('<div class="well"><strong>' + data.user + '</strong>' + data.msg + '</div>');
             });
             
             $userForm.submit(function (e) {
@@ -88,6 +88,14 @@
                     }
                 });
                 $username.val('');
+            });
+
+            socket.on('get users', function (data) {
+                var html = '';
+                for (var i = 0; i < data.length; i++) {
+                    html += '<li class="list-group-item">' + data[i] + '</li>'
+                }
+                $users.html(html);
             });
         });
     </script>
